--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
 RewriteEngine On
-RewriteRule /2012/02/16/why-baltimore.html /2013/02/16/why-baltimore.html
+RewriteRule /bingo http://google.com?yo=bingo [R=301,L]
