--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "grunt",
     "build": "grunt build",
-    "publish": "git add --all && git add -u && git commit -m 'Publishing the site' && git push origin master"  
+    "publish": "git add --all && git add -u && git commit -m 'Publishing the site' && git push origin master"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -10,6 +10,13 @@
     "jade": "^1.9.1",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-connect": "^0.9.0"
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "pagemaki": "^0.1.0",
+    "marked": "^0.3.3"
+  },
+  "dependencies": {
+    "lodash": "^3.0.1",
+    "moment": "^2.9.0"
   }
 }
