--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "lodash": "^3.0.1",
-    "moment": "^2.9.0"
+    "moment": "^2.9.0",
+    "striptags": "^2.0.1"
   }
 }
