--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-markdown": "^0.7.0",
-    "jade": "^1.9.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "pagemaki": "^0.1.0",
-    "marked": "^0.3.3"
+    "grunt-markdown": "^0.7.0",
+    "jade": "^1.9.1",
+    "marked": "^0.3.3",
+    "pagemaki": "^0.2.1"
   },
   "dependencies": {
     "lodash": "^3.0.1",
